// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatComposer staged progress snapshots matches staged block-1 snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#121212",
        "borderTopColor": "#2a2a2a",
        "borderTopWidth": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
      },
      {
        "bottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginHorizontal": 12,
        "marginTop": 8,
      }
    }
  >
    <View
      accessibilityLabel="Schreibstatus: Normal write"
      style={
        [
          {
            "alignSelf": "flex-start",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "rgba(0, 255, 0, 0.10)",
            "borderColor": "rgba(0, 255, 0, 0.35)",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#e0e0e0",
            "fontSize": 11,
            "fontWeight": "700",
            "letterSpacing": 0.2,
          }
        }
      >
        Normal write
      </Text>
    </View>
    <View
      accessibilityLabel="Stufenmodus aktiv: wartet auf Block 1 (0/3)"
      style={
        [
          {
            "alignSelf": "flex-start",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "rgba(0, 220, 130, 0.12)",
            "borderColor": "rgba(0, 220, 130, 0.45)",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#e0e0e0",
            "fontSize": 11,
            "fontWeight": "700",
            "letterSpacing": 0.2,
          }
        }
      >
        Stufenmodus · wartet auf Block 1 (0/3)
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "rgba(0, 255, 0, 0.08)",
        "borderColor": "rgba(0, 255, 0, 0.2)",
        "borderRadius": 12,
        "borderWidth": 1,
        "marginBottom": 8,
        "marginHorizontal": 12,
        "marginTop": 8,
        "paddingHorizontal": 12,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#e0e0e0",
          "fontSize": 13,
          "lineHeight": 18,
        }
      }
    >
      🧩 Stufenmodus: Nutze "block 1", "mach block 1" oder "weiter". Aktuell angewendet: 0/3.
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "backgroundColor": "#121212",
        "flexDirection": "row",
        "minHeight": 56,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <View
      accessibilityHint="Öffnet die Dateiauswahl"
      accessibilityLabel="Datei anhängen"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#2a2a2a",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "height": 36,
          "justifyContent": "center",
          "marginRight": 8,
          "opacity": 1,
          "width": 36,
        }
      }
      testID="chat-composer-attach-button"
    >
      <Text
        color="#999999"
        size={22}
      >
        attach-outline
      </Text>
    </View>
    <TextInput
      accessibilityHint="Stufenmodus aktiv: antworte mit "block 1", "weiter mit block 1" oder "weiter"..."
      accessibilityLabel="Nachricht eingeben"
      blurOnSubmit={false}
      maxLength={2000}
      multiline={true}
      onChangeText={[MockFunction]}
      onSubmitEditing={[Function]}
      placeholder="Stufenmodus aktiv: antworte mit "block 1", "weiter mit block 1" oder "weiter"..."
      placeholderTextColor="#999999"
      style={
        {
          "backgroundColor": "#0a0a0a",
          "borderColor": "#2a2a2a",
          "borderRadius": 18,
          "borderWidth": 1,
          "color": "#e0e0e0",
          "flex": 1,
          "fontSize": 14,
          "maxHeight": 120,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
      value=""
    />
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityLabel="Nachricht senden"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#121212",
            "borderColor": "#2a2a2a",
            "borderRadius": 20,
            "borderWidth": 1.5,
            "elevation": 3,
            "height": 40,
            "justifyContent": "center",
            "marginLeft": 8,
            "opacity": 0.55,
            "width": 40,
          }
        }
        testID="chat-composer-send-button"
      >
        <Text
          color="#999999"
          size={20}
        >
          send
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessibilityLabel="Verbleibende Zeichen: 2000"
    style={
      [
        {
          "alignSelf": "flex-end",
          "color": "#999999",
          "fontSize": 11,
          "marginBottom": 6,
          "marginRight": 14,
        },
        false,
        false,
      ]
    }
  >
    2000
  </Text>
</View>
`;

exports[`ChatComposer staged progress snapshots matches staged block-2 snapshot 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "backgroundColor": "#121212",
        "borderTopColor": "#2a2a2a",
        "borderTopWidth": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
      },
      {
        "bottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginHorizontal": 12,
        "marginTop": 8,
      }
    }
  >
    <View
      accessibilityLabel="Schreibstatus: Normal write"
      style={
        [
          {
            "alignSelf": "flex-start",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "rgba(0, 255, 0, 0.10)",
            "borderColor": "rgba(0, 255, 0, 0.35)",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#e0e0e0",
            "fontSize": 11,
            "fontWeight": "700",
            "letterSpacing": 0.2,
          }
        }
      >
        Normal write
      </Text>
    </View>
    <View
      accessibilityLabel="Stufenmodus aktiv: wartet auf Block 2 (1/3)"
      style={
        [
          {
            "alignSelf": "flex-start",
            "borderRadius": 999,
            "borderWidth": 1,
            "paddingHorizontal": 10,
            "paddingVertical": 4,
          },
          {
            "backgroundColor": "rgba(0, 220, 130, 0.12)",
            "borderColor": "rgba(0, 220, 130, 0.45)",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#e0e0e0",
            "fontSize": 11,
            "fontWeight": "700",
            "letterSpacing": 0.2,
          }
        }
      >
        Stufenmodus · wartet auf Block 2 (1/3)
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "rgba(0, 255, 0, 0.08)",
        "borderColor": "rgba(0, 255, 0, 0.2)",
        "borderRadius": 12,
        "borderWidth": 1,
        "marginBottom": 8,
        "marginHorizontal": 12,
        "marginTop": 8,
        "paddingHorizontal": 12,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#e0e0e0",
          "fontSize": 13,
          "lineHeight": 18,
        }
      }
    >
      🧩 Stufenmodus: Nutze "block 2", "mach block 2" oder "weiter". Aktuell angewendet: 1/3.
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-end",
        "backgroundColor": "#121212",
        "flexDirection": "row",
        "minHeight": 56,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      }
    }
  >
    <View
      accessibilityHint="Öffnet die Dateiauswahl"
      accessibilityLabel="Datei anhängen"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#2a2a2a",
          "borderRadius": 18,
          "borderWidth": 1,
          "elevation": 2,
          "height": 36,
          "justifyContent": "center",
          "marginRight": 8,
          "opacity": 1,
          "width": 36,
        }
      }
      testID="chat-composer-attach-button"
    >
      <Text
        color="#999999"
        size={22}
      >
        attach-outline
      </Text>
    </View>
    <TextInput
      accessibilityHint="Stufenmodus aktiv: antworte mit "block 2", "weiter mit block 2" oder "weiter"..."
      accessibilityLabel="Nachricht eingeben"
      blurOnSubmit={false}
      maxLength={2000}
      multiline={true}
      onChangeText={[MockFunction]}
      onSubmitEditing={[Function]}
      placeholder="Stufenmodus aktiv: antworte mit "block 2", "weiter mit block 2" oder "weiter"..."
      placeholderTextColor="#999999"
      style={
        {
          "backgroundColor": "#0a0a0a",
          "borderColor": "#2a2a2a",
          "borderRadius": 18,
          "borderWidth": 1,
          "color": "#e0e0e0",
          "flex": 1,
          "fontSize": 14,
          "maxHeight": 120,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
      value=""
    />
    <View
      collapsable={false}
      style={
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        }
      }
    >
      <View
        accessibilityLabel="Nachricht senden"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#121212",
            "borderColor": "#2a2a2a",
            "borderRadius": 20,
            "borderWidth": 1.5,
            "elevation": 3,
            "height": 40,
            "justifyContent": "center",
            "marginLeft": 8,
            "opacity": 0.55,
            "width": 40,
          }
        }
        testID="chat-composer-send-button"
      >
        <Text
          color="#999999"
          size={20}
        >
          send
        </Text>
      </View>
    </View>
  </View>
  <Text
    accessibilityLabel="Verbleibende Zeichen: 2000"
    style={
      [
        {
          "alignSelf": "flex-end",
          "color": "#999999",
          "fontSize": 11,
          "marginBottom": 6,
          "marginRight": 14,
        },
        false,
        false,
      ]
    }
  >
    2000
  </Text>
</View>
`;
